include $(top_srcdir)/Makevars

data_syntax_DATA = 4gl.jsf ada.jsf ant.jsf asm.jsf avr.jsf awk.jsf batch.jsf c.jsf \
	classic_pascal.jsf clojure.jsf cobol.jsf coffee.jsf comment_todo.jsf \
	conf.jsf context.jsf csharp.jsf csh.jsf css.jsf debian_changelog.jsf  \
	debian.jsf diff.jsf d.jsf dockerfile.jsf elixir.jsf erb.jsf erlang.jsf \
	filename.jsf fortran.jsf git-commit.jsf go.jsf groovy.jsf haml.jsf \
	haskell.jsf htmlerb.jsf html.jsf ini.jsf iptables.jsf java.jsf jcf.jsf \
	joerc.jsf jsf_check.jsf jsf.jsf js.jsf json.jsf lisp.jsf lua.jsf m4.jsf \
	mail.jsf mason.jsf matlab.jsf md.jsf ocaml.jsf pascal.jsf perl.jsf php.jsf \
	powershell.jsf prolog.jsf properties.jsf ps.jsf puppet.jsf python.jsf \
	rexx.jsf r.jsf ruby.jsf rust.jsf scala.jsf sed.jsf sh.jsf sieve.jsf \
	skill.jsf sml.jsf spec.jsf sql.jsf swift.jsf systemverilog.jsf tcl.jsf \
	tex.jsf troff.jsf typescript.jsf verilog.jsf vhdl.jsf whitespace.jsf xml.jsf \
	yaml.jsf

EXTRA_DIST = $(data_syntax_DATA)
